Code clean-up.